# jellyfin-tui

./: .gitignore  Cargo.toml  README.md  config.yaml  flake.nix  rustfmt.toml  shell.nix
.github/: CONTRIBUTING.md
.github/workflows/: check.yml  fmt.yml  release.yml
crates/media-controls/: Cargo.toml  README.md
crates/media-controls/examples/: smoke.rs
crates/media-controls/src/: lib.rs  linux.rs  macos.rs  stub.rs
libmpv-rs/examples/: events.rs
libmpv-rs/src/: mpv.rs
src/: client.rs  config.rs  discord.rs  help.rs  helpers.rs  keyboard.rs  library.rs  macos.rs  main.rs  mpris.rs  mpv.rs  player.rs  playlists.rs  popup.rs  queue.rs  search.rs  socket.rs  sort.rs  tests.rs  tui.rs
src/database/: app_extension.rs  database.rs  discord.rs  extension.rs  mod.rs
src/database/migrations/: 0001_init.sql  0002_missing_counters.sql  0003_libraries.sql  0004_dislike_song.sql  0005_clean_remote_artists.sql  0006_meta.sql  0007_cover_art_id.sql  0007_drop_artist_items.sql
src/extra/: jellyfin-tui.desktop
src/themes/: dialoguer.rs  mod.rs  theme.rs
