[package]
name = "jellyfin-tui"
version = "1.3.3-DEV"
edition = "2021"

[features]
default = ["tls-native"]
tls-native = ["reqwest/native-tls"]
tls-rustls = ["reqwest/rustls"]

[dependencies]
reqwest = { version = "0.13.1", default-features = false, features = ["json", "stream", "blocking", "query", "http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.9.34"
libmpv2 = { version = "5.0.1" }
ratatui = { version = "0.29.0", default-features = false, features = ["serde"] }
crossterm = "0.29.0"
ratatui-image = { version = "8.0.1", default-features = false, features = ["crossterm"] }
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png", "webp"] }
dirs = "6.0.0"
chrono = "0.4.42"
color-thief = "0.2.2"
rand = "0.9.2"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
random-string = "1.1.0"
fs2 = "0.4.3"
dialoguer = "0.12.0"
flexi_logger = "0.31.7"
log = "0.4.28"
url = "2.5.7"
fs_extra = "1.3.0"
regex = "1.12.2"
discord-rich-presence = "1.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
souvlaki = { version = "0.8.3", default-features = false, features = ["use_zbus"] }

[target.'cfg(target_os = "macos")'.dependencies]
souvlaki = { version = "0.8.3", default-features = true }
cocoa = "0.26"
objc = "0.2"
