[package]
name = "jellyfin-tui"
version = "1.3.3"
edition = "2021"

[features]
default = ["tls-native"]
tls-native = ["reqwest/native-tls"]
tls-rustls = ["reqwest/rustls"]

[dependencies]
reqwest = { version = "0.13.1", default-features = false, features = ["json", "stream", "blocking", "query", "http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.9.34"
libmpv2 = { version = "5.0.3" }
ratatui = { version = "0.30.0", default-features = false, features = ["serde", "crossterm", "layout-cache"] }
crossterm = "0.29.0"
ratatui-image = { version = "10.0.5", default-features = false, features = ["crossterm"] }
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png", "webp"] }
dirs = "6.0.0"
chrono = "0.4.43"
color-thief = "0.2.2"
rand = "0.9.2"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
random-string = "1.1.0"
fs2 = "0.4.3"
dialoguer = "0.12.0"
flexi_logger = "0.31.8"
log = "0.4.29"
url = "2.5.8"
regex = "1.12.2"
discord-rich-presence = "1.0.0"
crokey = { version = "1.4.0", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
souvlaki = { version = "0.8.3", default-features = false, features = ["use_zbus"] }

[target.'cfg(target_os = "macos")'.dependencies]
souvlaki = { version = "0.8.3", default-features = true }
cocoa = "0.26.1"
objc = "0.2.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(cargo_clippy)'
] }
