[workspace]
members = [".", "crates/media-controls"]
resolver = "2"

[package]
name = "jellyfin-tui"
version = "1.5.0"
edition = "2021"

[features]
default = ["tls-native", "zbus"]
tls-native = [
    "reqwest/native-tls",
    "tokio-tungstenite/native-tls"
]
tls-rustls = [
    "reqwest/rustls",
    "tokio-tungstenite/rustls-tls-webpki-roots"
]
zbus = ["souvlaki/use_zbus"]
dbus = ["souvlaki/use_dbus"]

[dependencies]
reqwest = { version = "0.13.1", default-features = false, features = ["json", "stream", "blocking", "query", "http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, optional = false, features = ["connect"] }
futures-util = "0.3"
serde_yaml = "0.9.34"
libmpv2 = { version = "5.0.3" }
ratatui = { version = "0.30.0", default-features = false, features = ["serde", "crossterm", "layout-cache"] }
crossterm = "0.29.0"
ratatui-image = { version = "10.0.5", default-features = false, features = ["crossterm"] }
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png", "webp"] }
dirs = "6.0.0"
chrono = "0.4.43"
color-thief = "0.2.2"
rand = "0.10.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
random-string = "1.1.0"
fs2 = "0.4.3"
dialoguer = "0.12.0"
flexi_logger = "0.31.8"
log = "0.4.29"
url = "2.5.8"
regex = "1.12.2"
discord-rich-presence = "1.1.0"
crokey = { version = "1.4.0", features = ["serde"] }
unicode-normalization = "0.1"
indexmap = { version = "2", features = ["serde"] }
strum = "0.28.0"
strum_macros = "0.28.0"
arboard = "3.6.1"
media-controls = { path = "crates/media-controls" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(cargo_clippy)'
] }
