[package]
name = "media-controls"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
log = "0.4"
tokio = { version = "1", features = ["sync", "macros", "rt"] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
mpris-server = { version = "0.10.0", features = ["tokio"] }
